--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: build
+name: test
 on:
   - push
   - pull_request
@@ -7,11 +7,11 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  test:
+    name: test
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       - name: Install Go
         uses: actions/setup-go@v5
         with:
@@ -20,5 +20,9 @@ jobs:
           cache: false
       - name: Download Go modules
         run: go mod download
+      - name: Lint
+        uses: golangci/golangci-lint-action@v7
       - name: Build
         run: ./.github/build.sh
+      - name: Test
+        run: go test -v ./...
