--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,11 @@ on:
 permissions:
   contents: write
 
+concurrency:
+  group: release-mainline
+  cancel-in-progress: true
+
+
 jobs:
   build:
     runs-on: ubuntu-latest
