--- a/shutdownd.service
+++ b/shutdownd.service
@@ -8,6 +8,7 @@ Type=simple
 Restart=always
 RestartSec=1
 ExecStart=/opt/shutdownd/shutdownd
+AmbientCapabilities=CAP_NET_BIND_SERVICE
 
 [Install]
 WantedBy=multi-user.target
